--- a/About.html
+++ b/About.html
@@ -2,6 +2,29 @@
 <html lang="en">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
+<style>
+.rcorners1 {
+  border-radius: 15px;
+  border: 1px;
+  background: #fff;
+  width: 680px;
+  height: 75px;
+  justify-content: center;
+  font-weight: 500;
+  color: black;
+  padding: 25px;
+}
+.rcorners1:hover {
+  background-color: #fff;
+  color: black;
+  cursor: pointer;
+  transform: rotate(0deg) scale(1) 
+translateY(-10px);
+  transition: .5s all ease;
+  z-index: 400;
+}
+
+</style>
     <meta charset="utf-8">
     <title>About the Sandbox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -112,12 +135,16 @@
             <p style="text-align: left;">(i) improve the accessibility, efficiency, security and quality of financial services;</p>
             <p style="text-align: left;">(ii) enhance the efficiency and effectiveness of Malaysian financial institutions’ management of risks; or</p>
             <p style="text-align: left;">(iii) address gaps in or open up new opportunities for financing or investments in the Malaysian economy.</p>
-            <div id="sandbox-principles">
+            <div id="sandbox-principles"></div>
             <p style="text-align: left;">The minimum standards and requirements for participation in the sandbox were also reviewed to encourage wider participation of fintech companies. Applicants to the sandbox should be able to demonstrate that a product, service or solution has been developed to a functional stage and is ready for testing. The applicant must also have a good understanding of risks during testing, with adequate resources committed to effectively manage the risks.</p>
             <br>
-            <p style="text-align: left;" class="hover-arrow"><a href="index.html#related-publications"><i>For further information, you may refer to the press release for the Sandbox Framework</i></a></p>
-            <br>
-            <h4 class="h4" style="text-align: left;"><i><u>Principles Behind the Sandbox </u></i></h4>
+            <div class="row mx-1 justify-content-center">
+              <div class="rcorners1">
+                 <a href="index.html#related-publications"><p style="color: black;">For further information, you may refer to the press release for the Sandbox Framework</p></a>
+                  <br>
+              </div>
+            </div>
+            <h4 class="h4 pt-4" style="text-align: left;"><i><u>Principles Behind the Sandbox </u></i></h4>
             <p style="text-align: left;">The establishment of the Sandbox Framework and broader efforts by the Bank to facilitate innovation in financial services are guided by three key principles:</p>
             <p style="text-align: left;">(i) <strong><i>Parity</i></strong> – the Bank strives to create a level playing field for all industry players, regardless if they are incumbents or new entrants in the market. Regulatory requirements are applied equally to similar activities which often presents similar risks. In simpler terms - “same risks, same rules”. However, the Bank also recognises that regulations will need to be adjusted to address risks associated with new technologies and business models, in order to facilitate the creation of value through innovative solutions. </p>
             <p style="text-align: left;">(ii) <strong><i>Proportionality</i></strong> – regulators are also guided by this principle in designing regulations to ensure that requirements appropriately reflect the complexity and risk profile associated with a particular business activity or entity. In doing so, the Bank seeks to balance between achieving the desired policy objectives to safeguard public interest and minimising regulatory burden for the financial services industry. </p>
