--- a/FAQ.html
+++ b/FAQ.html
@@ -87,7 +87,7 @@
     <section class="bg-dark text-light header-inner p-0 jarallax position-relative" data-jarallax data-speed="0.2" data-overlay>
       <img src="https://www.un.org/sites/un2.un.org/files/field/image/inspiring_global_action_reframing_responsibilities_to_one_another_and_our_communities_during_the_covid-19_pandemic.jpg" alt="Image" class="jarallax-img opacity-40">
       
-     <div class="container py-0">
+     <div class="container py-5">
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
 		   <h1 class="h1">Frequently Asked Questions (FAQ)</h1>
@@ -116,7 +116,7 @@
   
       <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-1" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-1">
-                <span class="h6 mb-0">What is the Sandbox & is it <span class="text-primary-2">right </span> for you?</span>
+                <span class="h6 mb-0">What is the Sandbox & is it right for you?</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="https://amer6693.github.io/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -257,40 +257,7 @@
             </div>
   
   
-      <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
-              <div data-target="#faq-9" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-9">
-                <span class="h6 mb-0">What do you need to know and do?</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="https://amer6693.github.io/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
-  <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
-  </svg>
-              </div>
-              <div class="collapse" id="faq-9">
-                <div class="pt-3">
-                  <p class="mb-0">
-                    <ul>
-                      <li>Description of the product, service or solution</li>
-                      <li>How is the solution genuinely innovative</li>
-                      <li>How the usefulness and functionality of the solution has been assessed and/or tested</li>
-                      <li>Evidence of resources available to support testing in the Sandbox</li>
-                      <li>Business plan for the solution to be offered on wider commercial scale</li>
-                      <li>Legal or regulatory requirements that are incompatible with the solution and the regulatory flexibilities needed to undertake the test</li>
-                      <li>Identify risks associated with the testing</li>
-                      <li>Identify appropriate risk mitigation measures/safeguards</li>
-                      <li>Intended key outcomes of the testing</li>
-                      <li>Expected duration of the test</li>
-                      <li>Location of the IT Infrastructure</li>
-                      <li>Source of funding for the testing</li>
-                      <li>Collaboration between financial institution and fintech company, if any</li>
-                      </ul>                   
-                     </p>
-                </div>
-              </div>
-            </div>
-  <br>
-  <h4 class="" style="color: white;">Application: What happens when you apply to the Sandbox?</h4>
-  
-      <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
+            <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-10" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-10">
                 <span class="h6 mb-0">How can you apply to the Sandbox?</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="https://amer6693.github.io/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -309,6 +276,8 @@
                 </div>
               </div>
             </div>
+  <br>
+  <h4 class="" style="color: white;">Application: What happens when you apply to the Sandbox?</h4>
             
             <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-11" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-11">
@@ -322,7 +291,7 @@
                 <div class="pt-3">
                   <p class="mb-0">
                     <div class="panel-body toggle-content fusion-clearfix">
-                      <p>Your application will be assessed against the eligibility criteria specified under section 5 of the Regulatory Sandbox Framework. This would typically involve several discussions to better understand your proposed business model. You should refer to the application guidance <a href=""> [link to pre-application section of apply page] here</a>  for further information. </p>
+                      <p>Your application will be assessed against the eligibility criteria specified under section 5 of the Regulatory Sandbox Framework. This would typically involve several discussions to better understand your proposed business model. You should refer to the application guidance <a href="Guidance.html#pre-application">here</a>  for further information. </p>
                       </div>
                   </p>
                 </div>
@@ -497,7 +466,8 @@
                      </p>
                 </div>
               </div>
-            </div> 
+            </div>
+            <br></br> 
 
   <!-- END FAQ LIST -->        
     </div>
