--- a/Regulations.html
+++ b/Regulations.html
@@ -27,7 +27,7 @@ translateY(-10px);
 #rcorners1 {
   border-radius: 15px;
   border: 1px;
-  background: #F3EACE;
+  background: #FFB318;
   width: 190px;
   height: 100px;
   text-align: center;
@@ -36,7 +36,7 @@ translateY(-10px);
   padding: 20px;
 }
 #rcorners1:hover {
-  background-color: #F3EACE;
+  background-color: #FFB318;
   color: black;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
@@ -47,7 +47,7 @@ translateY(-10px);
 
 #rcorners2 {
   border-radius: 15px;
-  background: #E7F1D4;
+  background: #349C55;
   padding: 20px; 
   width: 190px;
   height: 100px;
@@ -58,7 +58,7 @@ translateY(-10px);
   vertical-align: middle;
 }
 #rcorners2:hover {
-  background-color: #E7F1D4;
+  background-color: #349C55;
   color: black;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
@@ -68,7 +68,7 @@ translateY(-10px);
 }
 #rcorners3 {
   border-radius: 15px;
-  background: #C2DEDF;
+  background: #1668BD;
   padding: 20px; 
   height: 100px;
   text-align: center;
@@ -78,7 +78,7 @@ translateY(-10px);
   vertical-align: middle;
 }
 #rcorners3:hover {
-  background-color: #C2DEDF;
+  background-color: #1668BD;
   color: black;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
@@ -361,7 +361,7 @@ translateY(-10px);
             </div>
 
           <div class="col-12 col-md-3 col-lg-4" >
-            <div class="card card-body">
+            <div class="card card-body" style="vertical-align: middle;">
               <div class="flex-grow-5 justify-content-center">
                 <h5 class="h5 pb-3" style="text-align: center;">Approval</h5>
                 <a href="https://www.bnm.gov.my/payment-systems" target="_blank"><p id="rcorners2" style="float:left;">Payment System Operator</p></a>
@@ -407,8 +407,8 @@ translateY(-10px);
             <div class="row mx-1 justify-content-center">
               <div class="col-4 col-md-4 col-lg-4" >
                 <a href="https://www.bnm.gov.my/documents/20124///277ebcd5-9c21-209b-3984-170ba28351d6" target="_blank">
-                <div class="card card-body-2">
-                  <div class="flex-grow pt-2">
+                <div class="card card-body-2" style="height: 150px;">
+                  <div class="flex-grow" style="padding-top: 1.5rem;">
                       <p style="text-align: center; color: black;"><b>Central Bank Act 2009</b></p>
                     </div>
                   </div>
@@ -417,8 +417,8 @@ translateY(-10px);
       
                 <div class="col-4 col-md-4 col-lg-4" >
                   <a href="https://www.bnm.gov.my/documents/20124///35ed2b4c-1995-f91d-3891-75d69d247d55" target="_blank">
-                  <div class="card card-body-2">
-                    <div class="flex-grow pt-2">
+                  <div class="card card-body-2" style="height: 150px;">
+                    <div class="flex-grow" style="padding-top: 1.5rem;">
                       <p style="text-align: center; color: black;"><b>Financial Services Act 2013</b></p>
                     </div>
                   </div>
@@ -429,8 +429,8 @@ translateY(-10px);
       
                 <div class="col-4 col-md-4 col-lg-4" >
                   <a href="https://www.bnm.gov.my/documents/20124///8102422b-e6dd-d149-8db0-e3637e89ed5c" target="_blank">
-                  <div class="card card-body-2 ">
-                    <div class="flex-grow pt-2">
+                  <div class="card card-body-2" style="height: 150px;">
+                    <div class="flex-grow"style="padding-top: 1.5rem;">
                       <p style="text-align: center; color: black;"><b>Islamic Financial Services Act 2013</b></p>
                     </div>
                   </div>
@@ -439,8 +439,8 @@ translateY(-10px);
 
                 <div class="col-4 col-md-4 col-lg-4" >
                   <a href="https://www.bnm.gov.my/documents/20124///ef89a17a-0a5b-27ad-8aba-458a9888cd1f" target="_blank">
-                  <div class="card card-body-2">
-                    <div class="flex-grow mt-3 pb-3">
+                  <div class="card card-body-2" style="height: 150px;">
+                    <div class="flex-grow" style="padding-top: 1.5rem;">
                       <p style="text-align: center; color: black;"><b>Money Services Business Act 2011
                       </b></p>
                     </div>
@@ -450,7 +450,7 @@ translateY(-10px);
 
                 <div class="col-4 col-md-4 col-lg-4" >
                   <a href="https://www.bnm.gov.my/documents/20124///72c34953-3515-a4b9-2217-9322bb75d22b" target="_blank">
-                  <div class="card card-body-2">
+                  <div class="card card-body-2" style="height: 150px;">
                     <div class="flex-grow">
                       <p style="text-align: center; color: black;"><b>Anti-Money Laundering, Anti-Terrorism Financing and Proceeds of Unlawful Activities Act 2001
                       </b></p>
@@ -461,8 +461,8 @@ translateY(-10px);
 
                 <div class="col-4 col-md-4 col-lg-4" >
                   <a href="https://www.bnm.gov.my/documents/20124///3448d035-44ff-afca-091c-3cc31d7e53d8" target="_blank">
-                  <div class="card card-body-2">
-                    <div class="flex-grow mt-3 pb-3">
+                  <div class="card card-body-2" style="height: 150px;">
+                    <div class="flex-grow" style="padding-top: 1.5rem;">
                       <p style="text-align: center; color: black;"><b>Currency Act 2020
                       </b></p>
                     </div>
