content update from WM

--- a/About.html
+++ b/About.html
@@ -3,20 +3,21 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 <style>
+
 .rcorners1 {
   border-radius: 15px;
-  border: 1px;
   background: #fff;
-  width: 680px;
-  height: 75px;
+  height: fit-content;
   justify-content: center;
+  align-items: center;
   font-weight: 500;
   color: black;
-  padding: 25px;
+  padding-left:17px;
+  padding-right: 17px;
 }
 .rcorners1:hover {
-  background-color: #fff;
-  color: black;
+  background-color: rgb(231, 229, 229);
+  color: #1B4079;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
 translateY(-10px);
@@ -108,7 +109,7 @@ translateY(-10px);
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
 		   <h1 class="h1">About the Regulatory Sandbox</h1>
-           <p class="lead">As advances in financial technology have led to the introduction of new business models and solutions, the Sandbox seeks to encourage innovation and the delivery of financial services by granting regulatory flexibilities for fintech solutions with genuine value proposition to be experimented in a production or live environment. Such flexibilities will be accompanied by appropriate safeguards to preserve financial stability and fair treatment to consumers.
+           <p class="lead">As advances in financial technology have led to the introduction of new business models and solutions, the Regulatory Sandbox seeks to encourage innovation and the delivery of financial services by granting regulatory flexibilities for fintech solutions with genuine value proposition to be experimented in a production or live environment. Such flexibilities will be accompanied by appropriate safeguards to preserve financial stability and fair treatment to consumers.
           </p>
           </div>
         </div>
@@ -130,7 +131,7 @@ translateY(-10px);
             <h2 class="h2"><p style="text-align: center;">The Sandbox Story</p> </h2>
             <br>
             <h4 class="h4" style="text-align: left;"><i><u>Establishment of the Regulatory Sandbox</u></i></h4>
-            <p style="text-align: left;">The Sandbox Framework was published in October 2016 to enable the experimentation of fintech solutions in a live environment, with the appropriate safeguards and regulatory requirements. The policy was issued following a public consultation of the policy’s exposure draft released in July 2016 which received over 60 feedback from various stakeholders including financial institutions, fintech companies, associations and other corporates. </p>
+            <p style="text-align: left;">The Regulatory Sandbox Framework was published in October 2016 to enable the experimentation of fintech solutions in a live environment, with the appropriate safeguards and regulatory requirements. The policy was issued following a public consultation of the policy’s exposure draft released in July 2016 which received feedback from various stakeholders including financial institutions, fintech companies, associations and other corporates. </p>
             <p style="text-align: left;">Following the comments and suggestions received from the public, the eligibility criteria of the Sandbox was expanded to clarify the focus of innovations that the sandbox aims to support. Innovations should have clear potential to:</p>
             <p style="text-align: left;">(i) improve the accessibility, efficiency, security and quality of financial services;</p>
             <p style="text-align: left;">(ii) enhance the efficiency and effectiveness of Malaysian financial institutions’ management of risks; or</p>
@@ -140,16 +141,16 @@ translateY(-10px);
             <br>
             <div class="row mx-1 justify-content-center">
               <div class="rcorners1">
-                 <a href="index.html#related-publications"><p style="color: black;">For further information, you may refer to the press release for the Sandbox Framework</p></a>
+                 <a href="index.html#related-publications"><p style="color: black ;padding-top: 32px;">For further information, click here for the press release of the Sandbox Framework</p></a>
                   <br>
               </div>
             </div>
-            <h4 class="h4 pt-4" style="text-align: left;"><i><u>Principles Behind the Sandbox </u></i></h4>
+            <h4 class="h4 pt-3" style="text-align: left;"><i><u>Principles Behind the Sandbox </u></i></h4>
             <p style="text-align: left;">The establishment of the Sandbox Framework and broader efforts by the Bank to facilitate innovation in financial services are guided by three key principles:</p>
             <p style="text-align: left;">(i) <strong><i>Parity</i></strong> – the Bank strives to create a level playing field for all industry players, regardless if they are incumbents or new entrants in the market. Regulatory requirements are applied equally to similar activities which often presents similar risks. In simpler terms - “same risks, same rules”. However, the Bank also recognises that regulations will need to be adjusted to address risks associated with new technologies and business models, in order to facilitate the creation of value through innovative solutions. </p>
             <p style="text-align: left;">(ii) <strong><i>Proportionality</i></strong> – regulators are also guided by this principle in designing regulations to ensure that requirements appropriately reflect the complexity and risk profile associated with a particular business activity or entity. In doing so, the Bank seeks to balance between achieving the desired policy objectives to safeguard public interest and minimising regulatory burden for the financial services industry. </p>
             <p style="text-align: left;">(iii) <strong><i>Neutrality</i></strong> – regulatory requirements are designed to achieve its desired policy objective without preference or bias to specific technologies. Market participants have the flexibility to choose the most appropriate technology based on their needs and business model. However, financial service providers should recognise that different technologies may carry different risks, which in turn attracts different regulatory requirements and implications for its business activity.</p>
-            <p style="text-align: left;">Accordingly, requirements and risk parameters to be applied on Sandbox participants will be determined on a case-by-case basis guided by the principles above.</p>
+            <p style="text-align: left;">Accordingly, regulatory requirements and risk parameters to be applied on Sandbox participants will be determined on a case-by-case basis guided by the principles above.</p>
             </div>
           </div>
 
