--- a/FAQ.html
+++ b/FAQ.html
@@ -331,7 +331,7 @@ clip: rect(0, 1903px, 447.71875px, 0);
               </div>
               <div class="collapse" id="faq-13">
                 <div class="pt-3">
-                  <p class="mb-0">Yes, all information submitted to BNM for the purpose of the Regulatory Sandbox will be treated confidentially. The information is shared internally on a limited basis to facilitate assessment. </p>
+                  <p class="mb-0">Yes, all information submitted to BNM for the purpose of the Regulatory Sandbox will be treated confidentially. </p>
                 </div>
               </div>
             </div>
