--- a/Guidance.html
+++ b/Guidance.html
@@ -559,7 +559,6 @@ dl {
                 <p class="mb-0">
                   <ul class="triangle">
                     <li>Be thorough in your planning and due diligence. Ensure that your business model is practical and realistic. Make sure you have the necessary resources (e.g. financial resources, human capital) to carry out the test. Conduct an appropriate risk assessment and put in place a reasonable risk management framework. Identify the potential regulatory impediments clearly.​</li><br>
-                    <li>Applicants without adequate experience (e.g. team member or advisor with relevant experience) or coaching (e.g. participation in mentorship or accelerator programs) regarding the basics of financial services are often not sufficiently thorough in considering the commercial feasibility and operational details in their proposed business model.​</li>
                   </ul>
                 </p>
               </div>
@@ -581,7 +580,7 @@ dl {
                 <p class="mb-0">
                   <ul class="triangle">
                     <li>Applicants should regard the Bank’s Sandbox team as your partners when discussing your participation and journey in the Sandbox. ​​</li><br>
-                    <li>Withholding information from the Sandbox team will slow down the assessment process and cause unnecessary delays in processing an application. In some cases, the withholding of pertinent information may also suggest doubts on the integrity and credibility of an applicant, which is an important eligibility criterion for joining the Sandbox.​</li>
+                    <li>Applicants are encouraged to support your application with as much information as possible on key areas required in the <a href="/BNM-Sandbox-Application-Form.docx" download="BNM-Sandbox-Application-Form.docx">application form</a>. Withholding information from the Sandbox team will slow down the assessment process and cause unnecessary delays in processing an application.​</li>
                   </ul>
                 </p>
               </div>
@@ -627,7 +626,7 @@ dl {
                     <div class="pt-3">
                       <p class="mb-0">
                         <ul class="triangle">
-                          <li>Approval to test in the Sandbox may be viewed as a ‘learner’s permit’. A full licence or approval is not necessarily guaranteed after the test.​ </li>
+                          <li>Approval to test in the Sandbox may be viewed as a ‘learner’s permit’. A full licence or approval is not necessarily guaranteed after the test and will be subject to meeting full requirements of the applicable licensing, approval or registration criteria under the FSA, IFSA and MSBA, as the case may be. </li>
                         </ul></p>
                     </div>
                   </div>
