update content from WM

--- a/FAQ.html
+++ b/FAQ.html
@@ -418,6 +418,7 @@ clip: rect(0, 1903px, 447.71875px, 0);
                     Applicant who have not managed to achieved the KPIs of a test will need to assess reasons for the failure and determine its next appropriate step, which may include winding down operations in an orderly manner, or considering changes to the business model and alternative business arrangements.</p>                  </div>
               </div>
             </div>
+
             <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-18" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-18">
                 <span class="h6 mb-0">Where the testing is successful, can it be deemed as an automatic approval by BNM for the fintech company to provide the product/service/solution?</span>
@@ -432,18 +433,36 @@ clip: rect(0, 1903px, 447.71875px, 0);
                   </div>
               </div>
             </div>
-  <br>
-  <h4 class="" style="color: white;">General</h4>
-  
-  <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
+
+            <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-19" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-19">
-                <span class="h6 mb-0">What are the activities/ businesses regulated by BNM?</span>
+                <span class="h6 mb-0">What will happen upon expiry of the testing period? </span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
   </svg>
               </div>
               <div class="collapse" id="faq-19">
+                <div class="pt-3">
+                  <ul>
+                  <li>An approval to participate in the sandbox and any regulatory flexibility accorded will automatically expire, unless prior written approval has been sought from the Bank to extend the testing period. </li>
+                  <li>Upon completion of the testing, the Bank will decide whether to allow the product, service or solution to be introduced in the market on a wider scale. Where allowed, participating fintech companies intending to carry out regulated businesses will be assessed based on applicable licensing, approval and registration criteria under the FSA, IFSA and MBSA, as the case may be.  </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+  <br>
+  <h4 class="" style="color: white;">General</h4>
+  
+  <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
+              <div data-target="#faq-20" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-20">
+                <span class="h6 mb-0">What are the activities/ businesses regulated by BNM?</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
+  <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
+  </svg>
+              </div>
+              <div class="collapse" id="faq-20">
                 <div class="pt-3">
                   <p class="mb-0">
                     <div class="panel-body toggle-content fusion-clearfix">
