content update from WM

--- a/FAQ.html
+++ b/FAQ.html
@@ -448,6 +448,7 @@ clip: rect(0, 1903px, 447.71875px, 0);
                   <li>An approval to participate in the sandbox and any regulatory flexibility accorded will automatically expire, unless prior written approval has been sought from the Bank to extend the testing period. </li>
                   <li>Upon completion of the testing, the Bank will decide whether to allow the product, service or solution to be introduced in the market on a wider scale. Where allowed, participating fintech companies intending to carry out regulated businesses will be assessed based on applicable licensing, approval and registration criteria under the FSA, IFSA and MBSA, as the case may be.  </li>
                   </ul>
+                  <a href="Regulations.html" class="hover-arrow"> Read more about legislation here</a></p>
                 </div>
               </div>
             </div>
