--- a/Regulations.html
+++ b/Regulations.html
@@ -279,7 +279,7 @@ translateY(-10px);
 
           <div class="card card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-4" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-4">
-              <h6>Technology risks<p style="font-weight: 300;">Cybersecurity, data privacy and operational resilience</p></h6>
+              <h6>Safety and soudness<p style="font-weight: 300;">Ensure effective risk management by financial service providers </p></h6>
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
 <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -554,6 +554,7 @@ translateY(-10px);
                 </div>
               </div>
             </div>
+
             <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-10" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-10">
                 <span class="h6 mb-0">Step 4: Provide a clear rationale how the regulatory impediment affects you’re the value proposition of your business model​</span>
@@ -574,6 +575,21 @@ translateY(-10px);
                     <p >The applicant did not manage to find a solution to comply with the regulatory requirements and submits an application to the Regulatory Sandbox​ ​​</p>
 
                   </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
+              <div data-target="#faq-11" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-11">
+                <span class="h6 mb-0">Step 5: Propose mitigation measures or safeguards to address the underlying risks associated with a regulatory requirement​</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
+  <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
+  </svg>
+              </div>
+              <div class="collapse" id="faq-11">
+                <div class="pt-3">
+                  <p class="mb-1">Regulatory requirements are imposed to address a particular risk associated with a business model. If an applicant faces a challenge in complying with a regulatory requirement, it may also suggest alternative risk mitigation measures that could address such risks in a proportionate manner. This would significantly contribute toward enhancing the quality of an application.</p>
                 </div>
               </div>
             </div>
