--- a/Guidance.html
+++ b/Guidance.html
@@ -133,7 +133,7 @@ dl {
 
 /* Style the back side */
 .flip-card-back {
-  background-color: #d19c5f;
+  background-color: #ffcc80;
   color: white;
   border-radius: 25px;
   transform: rotateY(180deg);
