--- a/Regulations.html
+++ b/Regulations.html
@@ -27,7 +27,7 @@ translateY(-10px);
 #rcorners1 {
   border-radius: 15px;
   border: 1px;
-  background: #FFB318;
+  background: #ff9100;
   width: 190px;
   height: 100px;
   text-align: center;
@@ -36,7 +36,7 @@ translateY(-10px);
   padding: 20px;
 }
 #rcorners1:hover {
-  background-color: #FFB318;
+  background-color: #ff9100;
   color: black;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
@@ -47,7 +47,7 @@ translateY(-10px);
 
 #rcorners2 {
   border-radius: 15px;
-  background: #349C55;
+  background: #ffab40;
   padding: 20px; 
   width: 190px;
   height: 100px;
@@ -58,7 +58,7 @@ translateY(-10px);
   vertical-align: middle;
 }
 #rcorners2:hover {
-  background-color: #349C55;
+  background-color: #ffab40;
   color: black;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
@@ -68,7 +68,7 @@ translateY(-10px);
 }
 #rcorners3 {
   border-radius: 15px;
-  background: #1668BD;
+  background: #ffd180;
   padding: 20px; 
   height: 100px;
   text-align: center;
@@ -78,7 +78,7 @@ translateY(-10px);
   vertical-align: middle;
 }
 #rcorners3:hover {
-  background-color: #1668BD;
+  background-color: #ffd180;
   color: black;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
@@ -346,11 +346,11 @@ translateY(-10px);
 
 
       <div class="row mx-1 justify-content-center">
-        <div class="col-12 col-md-3 col-lg-4" >
+        <div class="col-12 col-md-3 col-lg-4">
             <div class="card card-body" style="vertical-align: middle;">
               <div class="flex-grow-0 justify-content-center">
                 <h5 class="h5 pb-3" style="text-align: center;">Licence</h5>
-                <a href="https://www.bnm.gov.my/web/guest/commercial-banks" target="_blank"><p id="rcorners1" style="float:left;;">Commercial/ Islamic Banks</p></a>
+                <a href="https://www.bnm.gov.my/web/guest/commercial-banks" target="_blank"><p id="rcorners1" style="float:left;">Commercial/ Islamic Banks</p></a>
                 <a href="https://www.bnm.gov.my/insurance-takaful" target="_blank"><p id="rcorners1" style="float: right; ">Insurance and Takaful</p></a>
                 <a href="https://www.bnm.gov.my/web/guest/investment-banks" target="_blank"><p id="rcorners1" style="float: left;padding-top: 35px;">Investment Banks</p></a>
                 <a href="https://www.bnm.gov.my/insurance-takaful" target="_blank"><p id="rcorners1" style="float: right;">Reinsurance (Retakaful)</p></a>
